test/spec_vectors/exports/ok/module_57.wat
(module (export "a" (table $a)) (table $a 0 funcref))