test/spec_vectors/exports/fail/module_21.wat
(module (func) (table 0 funcref) (export "a" (func 0)) (export "a" (table 0)))